--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.ignoreWords": [
+        "datepicker",
         "materialbox",
         "materialboxed",
-        "sidenav"
+        "scrollspy",
+        "sidenav",
+        "tooltipped"
     ]
 }
